--- a/style.css
+++ b/style.css
@@ -1,11 +1,3 @@
-.titulo{
-    width: 100%;
-    display: inline-block;
-    margin: 20px auto;
-    padding: 10px 0 0 0;
-    height: 70px;
-    color: black;
-    background-color: darkgray;
-    font-size: 50px;
-    text-align: center;
+.notification{
+    margin-top: 15px;
 }
