--- a/style.css
+++ b/style.css
@@ -3,7 +3,24 @@
 }
 
 .botao-registra{
+    width: 30%;
     padding-top: 20px;
-    margin-left: 40%;
+    margin-left: 35%;
     display: inline-block;
+}
+
+.data{
+    height: 100px;
+    width: 90%;
+    margin: 20px auto;
+    font-size: 50px;
+    text-align: center;
+}
+
+.hora{
+    height: 100px;
+    width: 90%;
+    margin: 20px auto;
+    font-size: 50px;
+    text-align: center;
 }
