--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-.notification{
-    margin-top: 15px;
-}
-
 .botao-registra{
     width: 30%;
     padding-top: 20px;
@@ -12,9 +8,10 @@
 .data{
     height: 100px;
     width: 90%;
-    margin: 20px auto;
+    margin: 30px auto;
     font-size: 50px;
     text-align: center;
+    padding: 10px;
 }
 
 .hora{
@@ -23,4 +20,9 @@
     margin: 20px auto;
     font-size: 50px;
     text-align: center;
+    padding: 10px;
+}
+
+.desabilitado{
+    height: 10px;
 }
