--- a/style.css
+++ b/style.css
@@ -23,6 +23,14 @@
     padding: 10px;
 }
 
-.desabilitado{
-    height: 10px;
+.razao{
+    height: 30px;
+    width: 90%;
+    display: inline block;
+    margin-left: 50%;
+}
+
+.razao label{
+    display: block;
+    padding-top: 5px;
 }
