--- a/style/style.css
+++ b/style/style.css
@@ -1,40 +1,70 @@
-.botao-registra{
+@import url('https://fonts.googleapis.com/css2?family=Mynerve&display=swap');
+
+body {
+    background-color: #13e77b;
+}
+
+header {
+    font-size: 35px;
+    font-family: 'Mynerve';
+    margin: 3%;
+    color: aliceblue;
+    font-weight: bold;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 380px;
+}
+
+#tempo-restante {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 100px;
+    color: aliceblue;
+}
+
+#buttons-row {
+    display: flex;
+    flex-direction: row;
+    margin-top: 20px;
+    align-items: center;
+    justify-content: space-between;
     width: 30%;
-    padding-top: 20px;
-    margin-left: 35%;
-    display: inline-block;
 }
 
-.data{
-    height: 100px;
-    width: 90%;
-    margin: 130px auto;
-    font-size: 50px;
-    text-align: center;
-    padding: 10px;
+.btn {
+    border-radius: 8px;
+    border-width: 1px;
+    background-color: #fff;
+    color: #13e77b;
+    border-color: #13e77b;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 150%;
+    height: 60px;
+    width: 200px;
 }
 
-.hora{
-    height: 100px;
-    width: 90%;
-    margin: 20px auto;
-    font-size: 50px;
-    text-align: center;
-    padding: 10px;
+.btn:hover {
+    cursor: pointer;
+    background-color: #05ad47;
+    color: #fff;
+    transition: background-color 0.5s ease;
 }
 
-.razao{
-    height: 30px;
-    width: 90%;
-    display: inline block;
-    margin-left: 50%;
+.stop {
+    color: #fa2a3a;
+    border-color: #fa2a3a;
 }
 
-.razao label{
-    display: block;
-    padding-top: 5px;
+.stop:hover {
+    background-color: #fa2a3a;
+    color: #fff;
+    transition: background-color 0.5s ease;
 }
-
 .copy{
     padding-top: 140px;
     text-align: center;
