--- a/style/style.css
+++ b/style/style.css
@@ -70,3 +70,26 @@ main {
     text-align: center;
     font-size: 10px;
 }
+
+#step-row {
+    margin-top: 15px;
+    display: flex;
+    flex-direction: row;
+    width: 35%;
+    justify-content: space-between;
+}
+
+#step-row > button {
+    background-color: #0ca5b0;
+    color: #fff;
+    border-color: #0ca5b0;
+    font-size: 120%;
+    height: 30px;
+    width: 150px;
+}
+
+#step-row > button:hover {
+    background-color: #fff;
+    color: #0ca5b0;
+    transition: background-color 0.5s ease;
+}
